# lamdu

./: .atom-build.json  .dir-locals.el  .ghci  .ghcid  .gitignore  .gitmodules  .hlint.yaml  .travis.yml  Bottle.cabal  CONTRIBUTING.md  GLFWWidgets.cabal  GLFWWrap.hs  GUIWidgets.hs  LINKS  Lamdu.cabal  Makefile  README.md  Setup.hs  TODO  TUTORIAL  Trash.hs  VerifyConfig.hs  cabal.project  config.json  default.nix  dot-ghci  flake.nix  freshdb.json  hie.yaml  make_hsproj.sh  package.yaml  run_hlint  runghc  stack.yaml  weeder.dhall
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build-nix.yml  ci.yml  haskell.yml
.helix/: languages.toml
Lamdu/: BranchGUI.hs  Builtins.hs  CharClassification.hs  CodeEdit.hs  Config.hs  DataFile.hs  DefEvaluators.hs  Eval.hs  EvalManager.hs  ExampleDB.hs  Expr.hs  Font.hs  Formatting.hs  Infer  Infer.hs  Main.hs  Opts.hs  Style.hs  Sugar.hs  Suggest.hs  Themes.hs  VersionControl.hs
Lamdu/Builtins/: Anchors.hs  Literal.hs  PrimVal.hs
Lamdu/CodeEdit/: ExpressionEdit.hs
Lamdu/Compiler/: Flatten.hs  Javascript.hs
Lamdu/Config/: Sampler.hs  Theme.hs
Lamdu/Data/: Anchors.hs  Arbitrary.hs  DbInit.hs  DbLayout.hs  Definition.hs  ExampleDB.hs  Expr.hs  Expression.hs  FFI.hs  Infer.hs  Ops.hs
Lamdu/Eval/: Background.hs  JS.hs  Manager.hs  Results.hs  ToExpr.hs  Val.hs
Lamdu/Expr/: Constraints.hs  Eval.hs  FlatComposite.hs  GenIds.hs  Globals.hs  IRef.hs  Identifier.hs  Lens.hs  Load.hs  Pretty.hs  Pure.hs  RecordVal.hs  Scheme.hs  Type.hs  TypeVars.hs  UniqueId.hs  Utils.hs  Val.hs
Lamdu/GUI/: BottleWidgets.hs  CodeEdit.hs  DefinitionEdit.hs  EvalView.hs  ExpressionEdit.hs  ExpressionGui.hs  Hover.hs  LightLambda.hs  Main.hs  ParamEdit.hs  Parens.hs  Precedence.hs  RedundantAnnotations.hs  Scroll.hs  TypeView.hs  VersionControl.hs  WidgetEnvT.hs  WidgetIdIRef.hs  WidgetIds.hs  Zoom.hs
Lamdu/Infer/: Context.hs  Deref.hs  GuidAliases.hs  ImplicitVariables.hs  LamWrap.hs  Load.hs  MakeTypes.hs  Monad.hs  RefData.hs  RefTags.hs  Rule.hs  Structure.hs  Trans.hs  Trigger.hs  TypedValue.hs  Unify.hs
Lamdu/Sugar/: AddNames.hs  AddNextHoles.hs  Convert.hs  EntityId.hs  Expression.hs  Infer.hs  InputExpr.hs  Internal.hs  Lens.hs  Monad.hs  NameGen.hs  Names.hs  NearestHoles.hs  OrderTags.hs  PresentationModes.hs  RedundantTypes.hs  RemoveTypes.hs  Types.hs
Lamdu/VersionControl/: Actions.hs
bottlelib/Control/: MonadA.hs
bottlelib/Data/: AtFieldTH.hs  Cache.hs  CurAndPrev.hs  IntDisjointSet.hs  MRUMemo.hs  Map  OpaqueRef.hs  UnionFind.hs
bottlelib/Numeric/: Utils.hs
codeedit/Editor/: Anchors.hs  BottleWidgets.hs  BranchGUI.hs  CTransaction.hs  CodeEdit.hs  Config.hs  Data.hs  DataLoad.hs  DataOps.hs  ExampleDB.hs  ITransaction.hs  Layers.hs  Main.hs  MonadF.hs  OTransaction.hs  VersionControl.hs  WidgetEnvT.hs  WidgetIds.hs
data/: config.json  default-settings.json  freshdb.json
data/doc/: JSExportReadMe.md
data/js/: anchors.js  protocol.js  rts.js  rtsConfig.js
data/languages/: base.mixin.json  english.json  hebrew.json  italian.json  italiano.json  left-to-right.mixin.json  right-to-left.mixin.json  rtl-english.mixin.json  spanish.json
data/sprites/: Credits.html
data/themes/: base.mixin.json  dark.json  default.json  light.json  retro.json
doc/: .gitignore  AnimIdMapping.md  Build.md  CodeJamReadMe.md  CodeStorage.md  Components.dot  Components.md  DbMigration.md  DevSetup.md  GuiTypes.md  HoleEditDoc  HoleSearchTerms.md  JSExportReadMe.md  Language.md  Localization.md  MainLoop.md  NameAutoGen.md  Names.md  Precedence.md  Sugar.md  SugarPasses.md  VideoPlan.md  Videos.md  names.dot
examples/: AnimIds.hs
examples/Editor/: Anchors.hs  AnimIds.hs  BottleWidgets.hs  BranchGUI.hs  CTransaction.hs  CodeEdit.hs  Config.hs  Data.hs  DataOps.hs  Main.hs
gui-examples/: .gitignore  README.md  SysInfo.hs  choice.hs  gui-demo.hs  hello-world.hs
hlint/: lensfixities.hs
js/: README  anchors.js  codeJamRtsConfig.js  jsExportRtsConfig.js  protocol.js  rts.js  rtsConfig.js
js/export/: rtsConfig.js
lamdu.hsproj/: lamdu.cabal
nix/: AlgoW.nix  FreetypeGL.nix  GLFW-b.nix  OpenGL.nix  aeson-diff.nix  bindings-GLFW.nix  bindings-freetype-gl.nix  freetype-gl.nix  freetype2.nix  graphics-drawingcombinators.nix  hypertypes.nix  inline-c-objc.nix  inline-js-core.nix  lamdu-calculus.nix  lamdu.nix  language-ecmascript.nix  lens.nix  leveldb-haskell.nix  momentu.nix  nodejs-exec.nix  rocksdb-haskell.nix  sized-functors.nix  syntax-tree.nix  testing-feat.nix  text-trie.nix
src/: AnimationExample.hs  EventMap.hs  Example.hs  FocusDelegator.hs  GUIWidgets.hs  GridEdit.hs  GridView.hs  KeyHandlers.hs  MainLoop.hs  SizeRange.hs  Sized.hs  SizedImage.hs  TextEdit.hs  Typematic.hs  Widget.hs  git-cache-cabal.spec  git-cache-stack.spec  stack_build.sh
src/Data/: AtFieldTH.hs  CurAndPrev.hs  Has.hs  MMap.hs  MRUMemo.hs  Property.hs
src/Editor/: Anchors.hs  BottleWidgets.hs  Config.hs  Data.hs  ExampleDB.hs  Main.hs  (+2 more)
test/: .gitignore  AnnotatedExpr.hs  DefinitionTypes.hs  EvalTest.hs  Formatting.hs  InferAssert.hs  InferCombinators.hs  InferExamples.hs  InferPerf.hs  InferTests.hs  InferWrappers.hs  Makefile  TestAnimIdClash.hs  TestCodec.hs  TestColorSchemes.hs  TestConfig.hs  TestDataFiles.hs  TestDisambiguation.hs  TestGui.hs  TestInstances.hs  TestJsExport.hs  TestJsRtsTags.hs  TestJsonCodecMigration.hs  TestMomentu.hs  TestNames.hs  TestNearestHoles.hs  TestNix.hs  TestPrecedence.hs  TestReadme.hs  TestStdlib.hs  TestSugar.hs  TestValUtils.hs  Tests.hs  TypedTests.hs  Utils.hs  benchmark_Infer.hs  benchmark_Typed.hs  profile_Infer.hs  profile_Typed.hs  test_Infer.hs  (+1 more)
themes/: default.json  light.json  retro.json
tools/: .gitignore  DedupTags.hs  TestConfig.hs  VerifyConfig.hs  apply-ci-nix-sha256.sh  cabal-cached  cabal-conf  cabal-run  cabal-test  cabal_build.sh  git-cache-cabal.spec  git-cache-stack.spec  hlint-rules.hs  lamdu-hlint.yaml  leaves.jq  macos-0-sign-and-notarise.sh  macos-1-staple-and-zip.sh  make_archive.hs  migrate.hs  run-lamdu.sh  run_hlint  stack-run.sh  stack_build.sh  win_make_archive.sh
(+1124 files in other folders)
