Name:                bottle
Version:             0.1
Synopsis:            A GLFW, OpenGL, and DrawingCombinators-based Widget-set
Description:         Bottle widgets
License:             GPL
License-file:        LICENSE
Author:              Eyal Lotem, Yair Chuchem
Maintainer:          eyal.lotem@gmail.com, yairchu@gmail.com
Category:            Graphics
Build-type:          Simple
-- Extra-source-files:
Cabal-version:       >= 1.8
Library
  -- Modules exported by the library.
  hs-Source-Dirs:      src

                       -- Bottle:
  Exposed-modules:     Graphics.UI.Bottle.Widgets.TextEdit,
                       Graphics.UI.Bottle.Widgets.TextView,
                       Graphics.UI.Bottle.Widgets.FocusDelegator,
                       Graphics.UI.Bottle.Widgets.Spacer,
                       Graphics.UI.Bottle.Widgets.Grid,
                       Graphics.UI.Bottle.Widgets.GridView,
                       Graphics.UI.Bottle.Widgets.EventMapDoc,
                       Graphics.UI.Bottle.Widgets.Box,
                       Graphics.UI.Bottle.SizeRange,
                       Graphics.UI.Bottle.Sized,
                       Graphics.UI.Bottle.EventMap,
                       Graphics.UI.Bottle.Widget,
                       Graphics.UI.Bottle.MainLoop,
                       Graphics.UI.Bottle.Animation,
                       Graphics.UI.Bottle.Rect,
                       Graphics.UI.GLFW.ModState,
                       Graphics.UI.GLFW.Events,
                       Graphics.UI.GLFW.Utils,
                       Graphics.DrawingCombinators.Utils,
                       Data.Vector.Vector2,
                       Data.List.Utils,
                       Data.Maybe.Utils,
                       Data.AtFieldTH,

                       -- DataStore:
                       Data.Random.Instances,
                       Data.ByteString.Utils,
                       Data.Binary.Utils,
                       Data.Store.Guid,
                       Data.Store.IRef,
                       Data.Store.IRef.Tree,
                       Data.Store.Rev.Change,
                       Data.Store.Rev.Version,
                       Data.Store.Rev.Branch,
                       Data.Store.Rev.ViewBranchInternal,
                       Data.Store.Rev.View,
                       Data.Store.Transaction,
                       Data.Store.Property,
                       Data.Store.Db

  Build-depends:       base >= 4,
                       GLFW-b >= 0.1.0,
                       derive >= 2.5,
                       graphics-drawingcombinators >= 1.4,
                       OpenGL,
                       StateVar,
                       utf8-string >= 0.3,
                       split >= 0.1,
                       newtype >= 0.2,
                       newtype-th >= 0.2,
                       containers >= 0.4,
                       binary >= 0.5,
                       time >= 1.2,
                       directory >= 1.0.1.1,
                       bytestring,
                       BerkeleyDB >= 0.8,
                       random >= 1.0.0,
                       utf8-string >= 0.3,
                       transformers >= 0.2.1,
                       TraceUtils,
                       filepath >= 1.1,
                       template-haskell,
                       safe

  ghc-options:         -O2 -Wall

Executable Editor
  hs-Source-Dirs:      examples
  Build-Depends:       base >= 4 && < 5,
                       graphics-drawingcombinators >= 1.4,
                       binary >= 0.5,
                       transformers,
                       split,
                       TraceUtils,
                       bytestring,
                       derive,
                       bottle
  Other-Modules:       Editor.Data,
                       Editor.DataOps,
                       Editor.Anchors,
                       Editor.WidgetIds,
                       Editor.Config,
                       Editor.CTransaction,
                       Editor.MonadF,
                       Editor.BottleWidgets,
                       Editor.CodeEdit,
                       Editor.BranchGUI
  ghc-options:         -O2 -Wall
  main-is:             Editor/Main.hs
  ghc-prof-options:    -prof -auto-all
