Name:                bottle
Version:             0.1
Synopsis:            A GLFW, OpenGL, and DrawingCombinators-based Widget-set
Description:         Bottle widgets
License:             GPL
License-file:        LICENSE
Author:              Eyal Lotem, Yair Chuchem
Maintainer:          eyal.lotem@gmail.com, yairchu@gmail.com
Category:            Graphics
Build-type:          Simple
-- Extra-source-files:
Cabal-version:       >= 1.8
Library
  -- Modules exported by the library.
  hs-Source-Dirs:      bottlelib

                       -- Bottle:
  Exposed-modules:     Data.AtFieldTH,
                       Data.List.Utils,
                       Data.Maybe.Utils,
                       Data.MRUMemo,
                       Data.UnionFind.IntMap,
                       Data.Vector.Vector2,
                       Graphics.DrawingCombinators.Utils,
                       Graphics.UI.Bottle.Animation,
                       Graphics.UI.Bottle.Direction,
                       Graphics.UI.Bottle.EventMap,
                       Graphics.UI.Bottle.MainLoop,
                       Graphics.UI.Bottle.Rect,
                       Graphics.UI.Bottle.Widget,
                       Graphics.UI.Bottle.WidgetId,
                       Graphics.UI.Bottle.Widgets.StdKeys,
                       Graphics.UI.Bottle.Widgets.Box,
                       Graphics.UI.Bottle.Widgets.EventMapDoc,
                       Graphics.UI.Bottle.Widgets.FlyNav,
                       Graphics.UI.Bottle.Widgets.FocusDelegator,
                       Graphics.UI.Bottle.Widgets.Edges,
                       Graphics.UI.Bottle.Widgets.Grid,
                       Graphics.UI.Bottle.Widgets.GridView,
                       Graphics.UI.Bottle.Widgets.Spacer,
                       Graphics.UI.Bottle.Widgets.TextEdit,
                       Graphics.UI.Bottle.Widgets.TextView,
                       Graphics.UI.GLFW.Events,
                       Graphics.UI.GLFW.ModState,
                       Graphics.UI.GLFW.Utils,

                       -- DataStore:
                       Data.Random.Instances,
                       Data.ByteString.Utils,
                       Data.Binary.Utils,
                       Data.Store.Guid,
                       Data.Store.IRef,
                       Data.Store.Rev.Change,
                       Data.Store.Rev.Version,
                       Data.Store.Rev.Branch,
                       Data.Store.Rev.ViewBranchInternal,
                       Data.Store.Rev.View,
                       Data.Store.Transaction,
                       Data.Store.Property,
                       Data.Store.Db,

                       System.Random.Utils

  Build-depends:       base >= 4,
                       keyvaluehash >= 0.3,
                       GLFW-b >= 0.1.0,
                       OpenGL,
                       StateVar,
                       TraceUtils,
                       lens >= 2.2,
                       binary >= 0.5,
                       bytestring,
                       containers >= 0.4,
                       derive >= 2.5,
                       directory >= 1.0.1.1,
                       filepath >= 1.1,
                       graphics-drawingcombinators >= 1.4,
                       random >= 1.0.0,
                       safe,
                       split >= 0.1,
                       template-haskell,
                       time >= 1.2,
                       transformers >= 0.2.1,
                       utf8-string >= 0.3

  ghc-options:         -O2 -Wall
  ghc-prof-options:    -Wall -auto-all -caf-all -rtsopts

Executable Editor
  hs-Source-Dirs:      codeedit
  Build-Depends:       base >= 4,
                       hashable,
                       containers,
                       directory,
                       filepath,
                       lens >= 2.2,
                       graphics-drawingcombinators >= 1.4,
                       binary >= 0.5,
                       transformers,
                       split,
                       TraceUtils,
                       bytestring,
                       derive,
                       bottle,
                       random,
                       List >= 0.4.3
  Other-Modules:       Editor.Anchors,
                       Editor.ExampleDB,
                       Editor.BottleWidgets,
                       Editor.BranchGUI,
                       Editor.OTransaction,
                       Editor.ITransaction,
                       Editor.CodeEdit,
                       Editor.CodeEdit.ExpressionEdit,
                       Editor.CodeEdit.ExpressionEdit.ApplyEdit,
                       Editor.CodeEdit.ExpressionEdit.AtomEdit,
                       Editor.CodeEdit.ExpressionEdit.ExpressionGui,
                       Editor.CodeEdit.ExpressionEdit.FuncEdit,
                       Editor.CodeEdit.ExpressionEdit.HoleEdit,
                       Editor.CodeEdit.ExpressionEdit.LiteralEdit,
                       Editor.CodeEdit.ExpressionEdit.PiEdit,
                       Editor.CodeEdit.ExpressionEdit.SectionEdit,
                       Editor.CodeEdit.ExpressionEdit.VarEdit,
                       Editor.CodeEdit.ExpressionEdit.WhereEdit,
                       Editor.CodeEdit.Parens,
                       Editor.CodeEdit.Sugar,
                       Editor.Config,
                       Editor.Data,
                       Editor.Data.Load,
                       Editor.Data.Typed,
                       Editor.Data.Ops,
                       Editor.MonadF,
                       Editor.WidgetIds
  ghc-options:         -O2 -Wall
  ghc-prof-options:    -Wall -auto-all -caf-all -rtsopts
  main-is:             Editor/Main.hs
