Name:                Lamdu
Version:             0.1
Synopsis:            A next generation IDE
Description:         Lamdu functional programming editor
License:             GPL
License-file:        LICENSE
Author:              Eyal Lotem, Yair Chuchem
Maintainer:          eyal.lotem@gmail.com, yairchu@gmail.com
Homepage:            http://www.lamdu.org
Category:            Graphics
Build-type:          Simple
Extra-source-files:  tools/VerifyConfig.hs, tools/TestConfig.hs
Cabal-version:       >= 1.8
Data-files:          fonts/DejaVuSans.ttf
                   , fonts/DejaVuSansMono.ttf
                   , fonts/DejaVuSerif.ttf
                   , fonts/DejaVuSerif-Italic.ttf
                   , fonts/Purisa.ttf
                   , config.json
                   , themes/default.json
                   , themes/light.json
                   , themes/retro.json
                   , freshdb.json
                   , js/rts.js
                   , js/rtsConfig.js

                   , doc/JsExportReadMe.md
                   , js/jsExportRtsConfig.js

source-repository head
  type: git
  location: https://github.com/lamdu/lamdu.git

Library
  hs-Source-Dirs: src
  extensions: NoImplicitPrelude, OverloadedStrings, PartialTypeSignatures, LambdaCase, DeriveTraversable, DeriveGeneric
  Build-Depends:    AlgoW
                  , aeson >= 1.1
                  , aeson-pretty
                  , base >= 4.7
                  , base-compat >= 0.8.2 && < 0.10
                  , base-orphans >= 0.5.0
                  , base16-bytestring
                  , binary >= 0.7
                  , bytestring
                  , containers >= 0.4
                  , data-default >= 0.5
                  , deepseq
                  , deepseq-generics >= 0.1
                  , directory >= 1.0.1.1
                  , filepath >= 1.1
                  , edit-distance
                  , GLFW-b >= 1.4.8.0
                  , graphics-drawingcombinators >= 1.7.1
                  , hashable
                  , JuicyPixels
                  , lamdu-calculus
                  , language-ecmascript >= 0.17
                  , lens >= 4.1
                  , leveldb-haskell >= 0.6
                  , List >= 0.5.1
                  , mtl >= 2.2
                  , nodejs-exec
                  , OpenGL
                  , optparse-applicative >= 0.12
                  , pretty >=1.1.2 && <1.2
                  , process
                  , random >= 1.0.0
                  , safe-exceptions >= 0.1.4
                  , StateVar
                  , stm
                  , text
                  , time >= 1.2
                  , transformers >= 0.4.3
                  , unordered-containers
                  , uuid >= 1.3
                  , uuid-types >= 1.0
                  , vector
                  , wl-pprint >= 1.2
                  , zip-archive
                  , cryptohash-sha256

  Exposed-modules:  Control.Concurrent.Utils
                  , Control.Lens.Utils
                  , Control.Monad.Trans.Except.Utils
                  , Control.Monad.Trans.FastRWS
                  , Control.Monad.Trans.FastWriter
                  , Control.Monad.Transaction
                  , Data.Aeson.Utils
                  , Data.Binary.Utils
                  , Data.ByteString.Utils
                  , Data.CurAndPrev
                  , Data.Function.Decycle
                  , Data.IORef.Utils
                  , Data.List.Utils
                  , Data.MMap
                  , Data.MRUMemo
                  , Data.Map.Utils
                  , Data.Maybe.Utils
                  , Data.Monoid.Generic
                  , Data.Property
                  , Data.Set.Ordered
                  , Data.UUID.Utils
                  , Data.Vector.Vector2
                  , Foreign.C.Types.Instances
                  , GUI.Momentu
                  , GUI.Momentu.Align
                  , GUI.Momentu.Animation
                  , GUI.Momentu.Animation.Engine
                  , GUI.Momentu.Animation.Id
                  , GUI.Momentu.Direction
                  , GUI.Momentu.Draw
                  , GUI.Momentu.Element
                  , GUI.Momentu.EventMap
                  , GUI.Momentu.Font
                  , GUI.Momentu.Glue
                  , GUI.Momentu.Hover
                  , GUI.Momentu.Main
                  , GUI.Momentu.Main.Animation
                  , GUI.Momentu.Main.Image
                  , GUI.Momentu.MetaKey
                  , GUI.Momentu.ModKey
                  , GUI.Momentu.Rect
                  , GUI.Momentu.Responsive
                  , GUI.Momentu.Responsive.Expression
                  , GUI.Momentu.Responsive.Options
                  , GUI.Momentu.Scroll
                  , GUI.Momentu.State
                  , GUI.Momentu.View
                  , GUI.Momentu.Widget
                  , GUI.Momentu.Widget.Id
                  , GUI.Momentu.Widget.Instances
                  , GUI.Momentu.Widget.Types
                  , GUI.Momentu.Widgets.Choice
                  , GUI.Momentu.Widgets.Cursor
                  , GUI.Momentu.Widgets.EventMapHelp
                  , GUI.Momentu.Widgets.FocusDelegator
                  , GUI.Momentu.Widgets.Grid
                  , GUI.Momentu.Widgets.GridView
                  , GUI.Momentu.Widgets.Menu
                  , GUI.Momentu.Widgets.Menu.Search
                  , GUI.Momentu.Widgets.Spacer
                  , GUI.Momentu.Widgets.StdKeys
                  , GUI.Momentu.Widgets.TextEdit
                  , GUI.Momentu.Widgets.TextEdit.Property
                  , GUI.Momentu.Widgets.TextView
                  , GUI.Momentu.Zoom
                  , Graphics.DrawingCombinators.Utils
                  , Graphics.UI.GLFW.Events
                  , Graphics.UI.GLFW.Instances
                  , Graphics.UI.GLFW.Utils
                  , Lamdu.Builtins.Anchors
                  , Lamdu.Builtins.PrimVal
                  , Lamdu.CharClassification
                  , Lamdu.Compiler.Flatten
                  , Lamdu.Config
                  , Lamdu.Config.Sampler
                  , Lamdu.Config.Theme
                  , Lamdu.Config.Theme.Name
                  , Lamdu.Config.Theme.TextColors
                  , Lamdu.Config.Theme.ValAnnotation
                  , Lamdu.Data.Anchors
                  , Lamdu.Data.Db
                  , Lamdu.Data.Db.Init
                  , Lamdu.Data.Db.Layout
                  , Lamdu.Data.Db.Migration
                  , Lamdu.Data.Definition
                  , Lamdu.Data.Export.JS
                  , Lamdu.Data.Export.JSON
                  , Lamdu.Data.Export.JSON.Codec
                  , Lamdu.Data.Export.JSON.Migration
                  , Lamdu.Data.Export.JSON.Migration.ToVersion1
                  , Lamdu.Data.Export.JSON.Migration.ToVersion2
                  , Lamdu.Data.Export.JSON.Migration.ToVersion3
                  , Lamdu.Data.Export.JSON.Migration.ToVersion4
                  , Lamdu.Data.Export.JSON.Migration.ToVersion5
                  , Lamdu.Data.Meta
                  , Lamdu.Data.Ops
                  , Lamdu.Data.Ops.Subexprs
                  , Lamdu.Eval.JS
                  , Lamdu.Eval.JS.Compiler
                  , Lamdu.Eval.Manager
                  , Lamdu.Eval.Results
                  , Lamdu.Eval.Results.Process
                  , Lamdu.Expr.GenIds
                  , Lamdu.Expr.IRef
                  , Lamdu.Expr.Load
                  , Lamdu.Expr.UniqueId
                  , Lamdu.Font
                  , Lamdu.Formatting
                  , Lamdu.Fuzzy
                  , Lamdu.GUI.AnnotationsPass
                  , Lamdu.GUI.CodeEdit
                  , Lamdu.GUI.CodeEdit.AnnotationMode
                  , Lamdu.GUI.CodeEdit.AnnotationMode.Widget
                  , Lamdu.GUI.DefinitionEdit
                  , Lamdu.GUI.EvalView
                  , Lamdu.GUI.ExpressionEdit
                  , Lamdu.GUI.ExpressionEdit.ApplyEdit
                  , Lamdu.GUI.ExpressionEdit.BinderEdit
                  , Lamdu.GUI.ExpressionEdit.BuiltinEdit
                  , Lamdu.GUI.ExpressionEdit.CaseEdit
                  , Lamdu.GUI.ExpressionEdit.Dotter
                  , Lamdu.GUI.ExpressionEdit.EventMap
                  , Lamdu.GUI.ExpressionEdit.FragmentEdit
                  , Lamdu.GUI.ExpressionEdit.GetFieldEdit
                  , Lamdu.GUI.ExpressionEdit.GetVarEdit
                  , Lamdu.GUI.ExpressionEdit.IfElseEdit
                  , Lamdu.GUI.ExpressionEdit.HoleEdit
                  , Lamdu.GUI.ExpressionEdit.HoleEdit.Literal
                  , Lamdu.GUI.ExpressionEdit.HoleEdit.ResultGroups
                  , Lamdu.GUI.ExpressionEdit.HoleEdit.ResultWidget
                  , Lamdu.GUI.ExpressionEdit.HoleEdit.SearchArea
                  , Lamdu.GUI.ExpressionEdit.HoleEdit.ValTerms
                  , Lamdu.GUI.ExpressionEdit.HoleEdit.WidgetIds
                  , Lamdu.GUI.ExpressionEdit.InjectEdit
                  , Lamdu.GUI.ExpressionEdit.LambdaEdit
                  , Lamdu.GUI.ExpressionEdit.LiteralEdit
                  , Lamdu.GUI.ExpressionEdit.NomEdit
                  , Lamdu.GUI.ExpressionEdit.RecordEdit
                  , Lamdu.GUI.ExpressionEdit.TagEdit
                  , Lamdu.GUI.ExpressionGui
                  , Lamdu.GUI.ExpressionGui.Annotation
                  , Lamdu.GUI.ExpressionGui.Monad
                  , Lamdu.GUI.ExpressionGui.Wrap
                  , Lamdu.GUI.IOTrans
                  , Lamdu.GUI.LightLambda
                  , Lamdu.GUI.Main
                  , Lamdu.GUI.NameView
                  , Lamdu.GUI.ParamEdit
                  , Lamdu.GUI.PresentationModeEdit
                  , Lamdu.GUI.ReplEdit
                  , Lamdu.GUI.Settings
                  , Lamdu.GUI.StatusBar
                  , Lamdu.GUI.StatusBar.Common
                  , Lamdu.GUI.Styled
                  , Lamdu.GUI.Themes
                  , Lamdu.GUI.TypeView
                  , Lamdu.GUI.VersionControl
                  , Lamdu.GUI.VersionControl.Config
                  , Lamdu.GUI.WidgetIdIRef
                  , Lamdu.GUI.WidgetIds
                  , Lamdu.Infer.Trans
                  , Lamdu.Opts
                  , Lamdu.Paths
                  , Lamdu.Precedence
                  , Lamdu.Prelude
                  , Lamdu.Settings
                  , Lamdu.Style
                  , Lamdu.Sugar.Convert
                  , Lamdu.Sugar.Convert.Apply
                  , Lamdu.Sugar.Convert.Binder
                  , Lamdu.Sugar.Convert.Binder.Float
                  , Lamdu.Sugar.Convert.Binder.Inline
                  , Lamdu.Sugar.Convert.Binder.Params
                  , Lamdu.Sugar.Convert.Binder.Redex
                  , Lamdu.Sugar.Convert.Binder.Types
                  , Lamdu.Sugar.Convert.Case
                  , Lamdu.Sugar.Convert.Composite
                  , Lamdu.Sugar.Convert.DefExpr
                  , Lamdu.Sugar.Convert.DefExpr.OutdatedDefs
                  , Lamdu.Sugar.Convert.Expression
                  , Lamdu.Sugar.Convert.Expression.Actions
                  , Lamdu.Sugar.Convert.Fragment
                  , Lamdu.Sugar.Convert.GetField
                  , Lamdu.Sugar.Convert.GetVar
                  , Lamdu.Sugar.Convert.IfElse
                  , Lamdu.Sugar.Convert.Hole
                  , Lamdu.Sugar.Convert.Hole.ResultScore
                  , Lamdu.Sugar.Convert.Hole.Suggest
                  , Lamdu.Sugar.Convert.Inject
                  , Lamdu.Sugar.Convert.Input
                  , Lamdu.Sugar.Convert.Load
                  , Lamdu.Sugar.Convert.Monad
                  , Lamdu.Sugar.Convert.Nominal
                  , Lamdu.Sugar.Convert.ParamList
                  , Lamdu.Sugar.Convert.PostProcess
                  , Lamdu.Sugar.Convert.Record
                  , Lamdu.Sugar.Convert.TId
                  , Lamdu.Sugar.Convert.Tag
                  , Lamdu.Sugar.Convert.Text
                  , Lamdu.Sugar.Convert.Type
                  , Lamdu.Sugar.EntityId
                  , Lamdu.Sugar.Parens
                  , Lamdu.Sugar.Lens
                  , Lamdu.Sugar.Names.Add
                  , Lamdu.Sugar.Names.CPS
                  , Lamdu.Sugar.Names.Clash
                  , Lamdu.Sugar.Names.Get
                  , Lamdu.Sugar.Names.NameGen
                  , Lamdu.Name
                  , Lamdu.Sugar.Names.Walk
                  , Lamdu.Sugar.NearestHoles
                  , Lamdu.Sugar.OrderTags
                  , Lamdu.Sugar.PresentationModes
                  , Lamdu.Sugar.Types
                  , Lamdu.Sugar.Types.Binder
                  , Lamdu.Sugar.Types.Eval
                  , Lamdu.Sugar.Types.Expression
                  , Lamdu.Sugar.Types.GetVar
                  , Lamdu.Sugar.Types.Hole
                  , Lamdu.Sugar.Types.Tag
                  , Lamdu.Sugar.Types.Type
                  , Lamdu.Themes
                  , Lamdu.VersionControl
                  , Lamdu.VersionControl.Actions
                  , Numeric.Utils
                  , Paths.Utils
                  , Revision.Deltum.Db
                  , Revision.Deltum.IRef
                  , Revision.Deltum.Rev.Branch
                  , Revision.Deltum.Rev.Change
                  , Revision.Deltum.Rev.Version
                  , Revision.Deltum.Rev.View
                  , Revision.Deltum.Rev.ViewBranchInternal
                  , Revision.Deltum.Transaction
                  , System.Random.Utils

  other-modules:    Lamdu.Sugar.Internal
                  , Lamdu.Sugar.Internal.EntityId
                  , Paths_Lamdu

  ghc-options:         -O2 -Wall -Widentities -Wimplicit-prelude -Wmissing-home-modules -Wincomplete-patterns -Wnoncanonical-monad-instances -Wsemigroup -Wincomplete-record-updates -Wredundant-constraints
  ghc-prof-options:    -fprof-auto -fprof-cafs

Executable lamdu
  main-is: src/Lamdu/Main.hs
  extensions: NoImplicitPrelude, OverloadedStrings, PartialTypeSignatures, LambdaCase, DeriveTraversable, DeriveGeneric
  build-depends: Lamdu, base, directory, filepath, lens, OpenGL
  ghc-options: -O2 -Wall -Widentities -Wimplicit-prelude -Wmissing-home-modules -Wincomplete-patterns -Wnoncanonical-monad-instances -Wsemigroup -Wincomplete-record-updates -Wredundant-constraints -threaded
  ghc-prof-options: -fprof-auto -fprof-cafs -rtsopts

Test-Suite Tests
  type: exitcode-stdio-1.0
  extensions: NoImplicitPrelude, OverloadedStrings, PartialTypeSignatures, LambdaCase, DeriveTraversable, DeriveGeneric
  hs-source-dirs: test
  main-is: Tests.hs
  other-modules: TestInstances
  build-depends:
    base, HUnit, test-framework, test-framework-hunit, test-framework-quickcheck2, QuickCheck, aeson-diff,
    Lamdu, AlgoW, lamdu-calculus,
    aeson, bytestring, containers, filepath, lens, aeson-pretty, pretty, text
  ghc-options: -O2 -Wall -Widentities -Wimplicit-prelude -Wmissing-home-modules -Wincomplete-patterns -Wnoncanonical-monad-instances -Wsemigroup -Wincomplete-record-updates -Wredundant-constraints -threaded
  ghc-prof-options: -fprof-auto -fprof-cafs -rtsopts
